--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,7 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+@import 'https://fonts.googleapis.com/css?family=Pavanam|Source+Sans+Pro';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -45,4 +42,32 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+html,body{
+	background-color: white;
+	font-family: 'Pavanam', sans-serif;
+	font-size: 16px;
+}
+
+header{
+  position: fixed;
+  width: 100%;
+  height: 45px;
+  background: #335C7D;
+  color: #fff;
+  font-family: 'Source Sans Pro', sans-serif;
+	padding: 20px;
+}
+
+.header-text{
+	float: left;
+	font-size: 30px;
+	line-height: 40px;
+}
+
+.active-nerds{
+	float:right;
+	line-height: 50px;
+	margin-right: 70px;
 }
