--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -53,7 +53,7 @@ html,body{
 header{
   position: fixed;
   width: 100%;
-  height: 45px;
+  height: 35px;
   background: #335C7D;
   color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
@@ -62,12 +62,12 @@ header{
 
 .header-text{
 	float: left;
-	font-size: 30px;
-	line-height: 40px;
+	font-size: 2em;
+	line-height: 1em;
 }
 
 .active-nerds{
 	float:right;
-	line-height: 50px;
+	line-height: 2em;
 	margin-right: 70px;
 }
