Start playing sounds

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -51,10 +51,10 @@ html,body{
 }
 
 header{
-  position: fixed;
+  position: relative;;
   width: 100%;
   height: 35px;
-  background: #335C7D;
+  background: #7B1FA2;
   color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
 	padding: 20px;
@@ -70,4 +70,8 @@ header{
 	float:right;
 	line-height: 2em;
 	margin-right: 70px;
+}
+
+#area{
+	width: 100%;
 }
