--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -54,7 +54,7 @@ header{
   position: relative;;
   width: 100%;
   height: 35px;
-  background: #7B1FA2;
+  background: #000;
   color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
 	padding: 20px;
