--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -116,13 +116,12 @@ circle {
 }
 
 .online-users-div{
-	/*padding-top: 100px;*/
-	/*padding-bottom: 100px;*/
 	text-align: center;
 	position: fixed;
 	bottom: 20px;
 	width: 100%;
 	margin: 0 auto;
+	z-index: 1;
 }
 
 .online-users-text{
@@ -149,4 +148,5 @@ footer{
 	position: fixed;
 	bottom:20px;
 	right:20px;
+	z-index: 2;
 }
