Disable setting area height using CSS

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -101,7 +101,7 @@ header{
 #area{
 	width: 100%;
 	position: relative;
-	height: calc(100vh - 70px);
+	/*height: calc(100vh - 70px);*/
 }
 
 circle {
