--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -83,11 +83,12 @@ header{
 	float:right;
 	margin-right: 5%;
     margin-top: 30px;
+    visibility: hidden;
 }
 
 .events-remaining-text, .events-remaining-value{
 	font-size: 0.8em;
-	visibility: visible;
+	visibility: hidden;
 }
 
 
